--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     ]
   },
   "devDependencies": {
+    "@redwoodjs/auth-supabase-setup": "4.5.0",
     "@redwoodjs/core": "4.5.0"
   },
   "eslintConfig": {
